# pubwords

./: .gitignore  LICENSE  MANIFEST.in  notes.md  readme.md  setup.cfg
medical_words/: medical_words.py
src/: main.py  medical_words.py
src/corpus/: words.py  words.txt
src/pubwords/: words.py  words.txt
