[metadata]
name = medical-words-FERRARIIC
version = 1.0.0
author = Ferrariic
author_email = ferrariictweet@example.com
description = All extracted medical words from pubmed for use in NLP.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ferrariic/medical-words
project_urls =
    Bug Tracker = https://github.com/Ferrariic/medical-words/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = MEDICAL-WORDS
packages = find:
python_requires = >=3.6

[options.packages.find]
where = MEDICAL-WORDS