[metadata]
name = pubword
version = 1.0.5
author = Ferrariic
author_email = ferrariictweet@example.com
description = All extracted words from pubmed abstracts for use in NLP.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ferrariic/pubword
project_urls =
    Bug Tracker = https://github.com/Ferrariic/pubword/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data=True
python_requires = >=3.6

[options.packages.find]
where = src