[metadata]
name = pubwords
version = 1.0.4
author = Ferrariic
author_email = ferrariictweet@example.com
description = 19,000 unique words from all publically available PubMed abstracts for use in NLP and spell-checking.
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/Ferrariic/pubwords
project_urls =
    Bug Tracker = https://github.com/Ferrariic/pubwords/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data=True
python_requires = >=3.6

[options.packages.find]
where = src